# news-manager

./: .env.example  .gitignore  20260411.md  README.md  add_sources_plan.md  api_plan.md  cache_change_plan.md  cleanup_supabase_users.py  database_plan.md  discover_experiment.py  gistprism_v2_implementation_plan.md  hold  hold.html  hold.json  inspect_article.py  inspect_page_meta.py  instructions.md  my_sources.json  new_instructions_plan.md  pipeline_run_api.md  plan.md  plan_apr14.md  pyproject.toml  source_resolve_api.md  sources.json  sources_test.json  test_classifier.py  thestar_plan.md  todo.txt
docs/: supabase_cron_cleanup_guide.md
experiment_1/: README.md  discover.py
html/: index.html  news.html  technology.html
news_manager/: __init__.py  __main__.py  auth_admin.py  auth_supabase.py  cache.py  cli.py  config.py  cookies_loader.py  default_user_catalog.json  discovery_prompts.py  fetch.py  fetch_test.py  html_discovery_llm.py  llm.py  models.py  output.py  pipeline.py  pipeline_jobs.py  resolve_app.py  run_report.py  source_discovery.py  source_discovery_jobs.py  source_resolve.py  summarize.py  supabase_sync.py  to_html.py  user_sources_catalog.py
sql/: categories_delete_cascade_dependents.sql  news_article_exclusions.sql  news_article_exclusions_add_user_id_source_id.sql  news_article_exclusions_add_why.sql  news_article_exclusions_v2.sql  news_articles.sql  news_articles_add_why.sql  news_articles_v2_unique_user_category_url.sql
tests/: test_admin_create_user_api.py  test_auth_admin.py  test_auth_supabase.py  test_cache.py  test_cli.py  test_config.py  test_cookies_loader.py  test_default_user_catalog.py  test_feed.py  test_fetch.py  test_format_ingest_instructions.py  test_html_discovery_llm.py  test_normalize.py  test_pipeline.py  test_pipeline_api.py  test_resolve_api.py  test_resolve_llm_ingest_instructions.py  test_source_discovery_api.py  test_summarize.py  test_supabase_sync.py  (+3 more)
(+6 files in other folders)
